--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ repository = "https://github.com/SeanTater/pv"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "^2.33"
+clap = { version = "^4.2", features = [ "derive" ] }
 chrono = "^0.4"
 indicatif = "^0.17"
